* Fixed responsive overflow issue with the header nav.

--- a/theme/css/icgc-common.css
+++ b/theme/css/icgc-common.css
@@ -344,6 +344,11 @@ code {
 }
 
 @media (max-width: 992px) {
+
+  .navbar-default {
+    height: auto;
+  }
+
   .main-container {
     border: none;
   }
